# bolt-ingest

./: .gitignore  README.md  SETUP_FOR_MATHIS.md  install.ps1  install.sh  pyproject.toml  test_parser.py
bolt_ingest/: __init__.py  cli.py  config.py  downloader.py  library.py  manifest.py  parser.py  postprocess.py  transcript.py  update.py
bolt_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
